* [skip-ci] (Doesn't compile) * Deleted @ Params annotation (this doesn't need it's own annotation and can just be checked by class) * Updated Loading code to be a bit more organied and clean * Removed more no longer required overload code * Divided utility methods across specialized utility classes